ImpexAST/src/test/resources/errors/quotes/quoted-attributes.impex
# ERROR attributes cannot be surrounded by single quotes
INSERT_UPDATE Customer; 'uid[unique=true]';Name; 
; andi; Andy Warhol ;